Five references that were not holding what the program holds
Four of these move the column in our favour and one moves it against us, and
none of the five is a code generation change. A reader discounting today's
numbers should discount exactly this much of them.

The rule: a reference is what a competent Java programmer would write, and must
decline anything that puts a cost in one lane only -- no boxing where the
subject boxes nothing, no field narrower than the f64 a TypeScript `number` is.
Five references broke the second clause or the first.

  array-predicates    int[]              -> double[]      3.28x -> 1.71x
  array-methods       int[]              -> double[]      1.67x -> 1.18x
  arrays              int[], int total   -> double[]      1.35x -> 1.02x
  array-from          int[], Set<Integer>-> double[], Set<Double>   2.39x -> 1.95x
  array-mutations     ArrayList<Integer> -> a double[] list         1.06x -> 0.68x

Each of the four narrow ones carried a comment arguing at length that the
narrower reference was the deliberate harder one and that our `double[]` was a
real gap it should not hide. That argument is wrong about where the gap belongs:
element width is a middle-end representation choice, not something this backend
decides, and putting it in the ratio meant the ratio stopped being about code
generation. It is filed with `hir` with a number instead.

I also had it wrong about the size. Record 0147 published element width at 1.6%,
from instructions per operation -- the instrument I had chosen precisely because
this row's timing varies 1.22x between runs. It is the wrong instrument for a
width question, because width does not change how many instructions execute:

  int[]      33,139 instr/op    6,969 cycles/op    IPC 4.76
  double[]   35,717             13,293             IPC 2.69
             +7.8%              +91%

The row stalls rather than issues. `some`, `every` and `findIndex` each break on
their own comparison, so the compare's latency is th